kube3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: zero-to-k8s
  name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: zero-to-k8s
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: zero-to-k8s
    spec:
      containers:
      - image: zero-to-k8s:3.0.0
        name: zero-to-k8s
        resources: {}
